# audio-data-quality-tool

./: .gitattributes  .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
audio_qa/: pipeline.py  report.py
audio_qa/checks/: __init__.py  channel.py  clipping.py  duplicates.py  duration.py  loudness.py  noise.py  perceptual.py  quality_score.py  silence.py  transcript.py  transcript_ratio.py  upsampling.py
demo/: app.py  generate_sample_data.py
hf_space/: README.md  app.py  requirements.txt
hf_space/audio_qa/: __init__.py  cli.py
hf_space/audio_qa/checks/: sample_rate.py  tts_artifacts.py
tests/: conftest.py  test_checks.py
